# saucebox

./: .gitignore  README.md
sauce maximizer/: CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  GITHUB_SETUP.md  LICENSE  Makefile  README.md  README_LOCAL_DEV.md  README_NEW.md  README_SIMPLE.md  cli.py  install.bat  install.sh  pyproject.toml  sauce_cli.py  saucemax_cli.py  setup.py  test_local.sh
sauce maximizer/api/: app.py
sauce maximizer/docs/: API.md  TROUBLESHOOTING.md  USER_GUIDE.md
sauce maximizer/reaper/: SauceMax.lua  SauceMax_Minimal.lua
sauce maximizer/sauce_maximizer/: __init__.py  simple_analyzer.py
sauce maximizer/sauce_maximizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sauce maximizer/sauce_maximizer/core/: analyzer.py  optimizer.py
sauce maximizer/sauce_maximizer/models/: flavor_predictor.py
sauce maximizer/scripts/: analyze_reaper_track.py  analyze_reaper_track_simple.py  init_db.py
sauce maximizer/tests/: generate_test_audio.py  test_optimizer.py
sauce maximizer/tests/fixtures/: metadata.json  test_good_mix.npy  test_mixed.npy  test_noise.npy  test_poor_mix.npy  test_sine.npy
